[package]
name = "ssh_latency"
version = "0.1.0"
authors = ["hikalium <hikalium@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexpect = { git = "https://github.com/hikalium/rexpect.git" }
chrono = "0.4"
